# muservice-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
.circleci/: config.yml
settings/: default.json
src/: app_state.rs  db.rs  lib.rs  main.rs  router.rs  server.rs  settings.rs
src/model/: mod.rs  user.rs
test_migrations/: 20210526135022_create_users_table.sql  20220822135022_create_seed_user.sql
tests/: integration.rs  muservice.rs
