[package]
name = "muservice"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.6.0", features=["full"]}
routerify = "2.1.0"
sqlx = {version="0.5.5", features=["runtime-tokio-rustls", "postgres", "migrate"]}
hyper = "0.14.8"
anyhow = "1.0.40"
serde_json = "1.0.64"
serde = {version = "1.0.126", features=["derive"]}
config = {version = "0.11.0", features=["json"]}
lazy_static = "1.4.0"
