[package]
name = "muservice"
version = "0.1.0"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
edition = "2021"

[lib]
name = "libmuservice"
path = "src/lib.rs"

[[bin]]
name = "muservice"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features=["full"]}
routerify = "2.1.0"
sqlx = {version="0.6.1", features=["runtime-tokio-rustls", "postgres", "migrate"]}
hyper = "0.14.8"
anyhow = "1.0.61"
serde_json = "1.0.83"
serde = {version = "1.0.143", features=["derive"]}
config = {version = "0.13.2", features=["json"]}
lazy_static = "1.4.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
